# dask-flood-mapper

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.html  CONTRIBUTING.md  License.md  Makefile  Pipfile  README.html  README.md  _config.yml  _toc.yml  genindex.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: publish.yml  pytest.yml
_downloads/61e0bdf7e1b43c5c93d9488b22e04170/: LICENSE.txt
_sources/: CONTRIBUTING.md  README.md
_sources/notebooks/: 01_local_dask.ipynb  02_remote_dask.ipynb
backend/: app.py
backend/templates/: index.html
docs/: api.html  api.rst  conf.py  index.rst
floodmapper/: calculation.py  extra.py  processing.py  setup.py
notebooks/: 01_local_dask.html  01_local_dask.ipynb  02_flood_map_decomposed.ipynb  02_implementation_w_module.ipynb  02_local_dask_one_function.ipynb  02_local_dask_w_module.ipynb  02_remote_dask.html  02_remote_dask.ipynb  03_flood_map.ipynb  03_local_dask_one_function.ipynb  03_module_w_extra_functions.ipynb  04_configuration.html  04_configuration.ipynb  04_validation.ipynb  config.yaml  dask copy.ipynb  dask.ipynb
src/dask_flood_mapper/: __init__.py  app.py  calculation.py  catalog.py  cli.py  compress.py  config.yaml  flood.py  processing.py  setup.py  stac_config.py
src/flood/: calculation.py  config.yaml  decision.py  extra.py  processing.py  (+1 more)
tests/: __init__.py  test_acceptance.py  test_dask_flood_mapper.py  test_module.py  test_newfunctions.py  test_processing.py
user_interface/: run.py
(+2 files in other folders)
