[metadata]
name = dask_flood_mapper
version = attr: dask_flood_mapper.__version__
description = 
    Map floods with Sentinel-1 radar images. We replicate in this package the work 
    of Bauer-Marschallinger et al. (2022) on the TU Wien Bayesian-based flood 
    mapping algorithm.
author = Martin Schobben, Thais Beham
author_email = martin.schobben@tuwien.ac.at
long_description = file: README.md
platforms = any
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Operating System :: POSIX
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    pystac_client
    odc-stac
    dask[distributed]
    rioxarray

[options.packages.find]
where = src

[options.package_data]
dask_flood_mapper =
    data/*.tif
    *.yaml

[options.extras_require]
test =
    pytest
    pytest-cov
dev =
    eodc
    jupyter-book
    jupyter_bokeh
    hvplot
    pre-commit
    ruff
    nbstripout
    matplotlib
    geoviews
    datashader
    pre-commit
